<resources>
    <string name="app_name">GSurvey</string>

    <!-- URLS -->
    <string name="url_qa">http://mandragoragourmet.com/wsb/app/index.php/</string>
    <string name="url_prod">http://apps.inteligencial.net/gsurvey/index.php/</string>
    <!-- <string name="url_prod">http://mandragoragourmet.com/qa/app/index.php/</string> -->


    <!--Login -->
    <string name="act_login_edt_user">Usuario</string>
    <string name="act_login_password">Contraseña</string>
    <string name="act_login_confirm">Confirmar contraseña</string>
    <string name="act_login_login">Ingresar</string>
    <string name="act_login_signup">Registrarse</string>
    <string name="act_login_remember">¿Olvidó su contraseña?</string>
    <string name="act_login_enter">Ingresar</string>
    <string name="act_login_register">Registrar</string>
    <string name="general_menu">Cerrar Sesión</string>

    <!-- Gasolineras item-->
    <string name="fr_gasolinera_name">Nombre</string>
    <string name="fr_gasolinera_address">Dirección</string>

    <!--Main Activty -->
    <string name="main_activity_gas">Gasolineras</string>
    <string name="main_activity_saved">Guardadas</string>
    <string name="main_activity_sync">Sincronizar</string>
    <string name="main_activity_map">Mapa</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="network_error">No hay conexión a internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validate_field">%s es requerido</string>
    <string name="title_activity_maps">Map</string>
    <string name="locating">Ubicando...</string>


    <!--Survey -->
    <string name="capture_coordinate">Capturar Coordenadas</string>
    <string name="maps_indications">Mueva el mapa para cambiar la ubicación del marcador</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="text_version">V %s</string>
    <string name="title_activity_maps_detail">Map</string>
    <string name="act_recovery_title">Recuperar Contraseña</string>
    <string name="act_recovery_email">Correo Electrónico</string>
    <string name="sent">Enviar</string>
</resources>
