<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="8dp"
    >

    <RelativeLayout
        android:id="@+id/dialog_contacts_container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/dialog_container_info_pdv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/dialog_info_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="8dp"
                android:text="@string/act_recovery_title"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dialog_contacs_call_center_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/dialog_container_info_pdv">

            <EditText
                android:id="@+id/act_recovery_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_eigth"
                android:layout_marginStart="@dimen/margin_eigth"
                android:hint="@string/act_recovery_email"
                android:maxLength="300"/>


            <Button
                android:id="@+id/act_recovery_sent"
                android:text="@string/sent"
                style="@style/BlueButton"
                android:backgroundTint="@color/colorAccent"
                />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
